--- a/paginas/.env
+++ b/paginas/.env
@@ -5,6 +5,13 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database
 DATABASE_URL=sqlite:///db.sqlite3
+#ENDPOINTS
+API_EXPORT_TOKEN=luquinha_e_enzo
+
+# Mercado Pago !
+MP_PUBLIC_KEY=TEST-820e070f-4630-4486-a79e-1d425cccc5ed
+MP_ACCESS_TOKEN=TEST-4576504625517962-112212-7df5a111096eb5c7db21a0e35c3ac12c-1820247938
+MP_WEBHOOK_URL=https://catherin-postoptic-noncontemporaneously.ngrok-free.dev/api/webhook-mercadopago/
 
 # Email Configuration (opcional)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
