Novo início sem segredos

--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ EMAIL_HOST_PASSWORD=your-app-password
 SECURE_SSL_REDIRECT=False
 SESSION_COOKIE_SECURE=False
 CSRF_COOKIE_SECURE=False
+
+#google calendar
+GOOGLE_CALENDAR_SECRET_PATH=calendario.json
